# FastAPI---PostgreSQL_Post

./: .env  .gitignore  README.md  blogs.db  pyproject.toml
Blogs/: config.py  database.py  main.py  models.py  oauth2.py  schema.py
Blogs/repository/: posts.py  users.py  votes.py
Blogs/routes/: authentication.py  posts.py  users.py  votes.py
Important Information/: SQLs commands.txt  important info.txt
alembic/: env.py
